Compress Sass files and fix firefox align bug

--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -423,7 +423,7 @@ body {
         }//.bg
 
         ul {
-          min-height: 82px;
+          min-height: 84px;
         }//ul
       }//a
 
